--- a/labw1d1/exercise_4/excercise_4/pom.xml
+++ b/labw1d1/exercise_4/excercise_4/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.edu.miu.cs544.labw1d1</groupId>
-    <artifactId>exercise_1</artifactId>
+    <artifactId>excercise_4</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>exercise_1</name>
+    <name>excercise_4</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,9 +18,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>4.0.2</version>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>7.0.0.Beta1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
