add labw2d6 assignment_2 for submit

--- a/labw2d6/assignment_2/pom.xml
+++ b/labw2d6/assignment_2/pom.xml
@@ -20,15 +20,16 @@
             <version>6.2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.22.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.9.7</version>
-        </dependency>
     </dependencies>
+
 
 </project>
